<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="oab.questions.activity.QuestionActivity"
    android:background="#1B1B1B">
    <RelativeLayout
        android:id="@+id/container_question"
        android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    style="@style/Title">
	    <Button
	        android:id="@+id/btn_expand"
	        android:layout_height="40dip" 
	        android:layout_width="wrap_content"
	        android:layout_marginStart="5dip"
	        android:textSize="15sp"
	        android:text="@string/example_category"
	        style="@style/Title"
	        android:textAllCaps="true"
	        android:drawablePadding="5dip"
	        android:drawableStart="@drawable/ic_action_expand" />
	    <LinearLayout
	        android:id="@+id/separator"
	        android:layout_below="@id/btn_expand"
	        android:layout_height="2dip"
	        android:layout_width="fill_parent"
	        android:background="#FFFFFF"
	        android:orientation="horizontal" />
		<ScrollView
		    android:id="@+id/question"
	        android:layout_width="fill_parent"
	        android:layout_height="160dip"
	        android:paddingTop="10dip"
	        android:paddingBottom="10dip"
	        android:layout_below="@id/separator">
	        <RelativeLayout
	            android:layout_width="fill_parent"
	        	android:layout_height="wrap_content">
			    <TextView
			        android:id="@+id/txt_question"
			        style="@style/Title"
			        android:paddingLeft="10dip"
			        android:paddingRight="10dip"
			        android:textSize="17sp"
			        android:layout_width="fill_parent"
			        android:layout_height="fill_parent"
			        android:text="@string/example_question" />
		    </RelativeLayout>
		</ScrollView>
	</RelativeLayout>
    <LinearLayout
        android:id="@+id/container_answers"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/container_question"
        android:orientation="vertical"
        android:padding="5dip"
        android:weightSum="4">
		<RelativeLayout
		    android:id="@+id/container_A"
		    android:layout_height="fill_parent"
		    android:layout_width="fill_parent"
		    android:layout_weight="1">
	        <ImageButton
		        android:id="@+id/btn_expand_answer_A"
		        android:layout_width="wrap_content"
		        android:layout_height="fill_parent"
		        android:src="@drawable/ic_action_expand"
		        android:padding="5dip"
		        android:layout_alignParentRight="true"
		        android:contentDescription="@string/expand_answer"
		        style="@style/Answer" />
		    <Button
		        android:id="@+id/answer_A"
		        android:layout_width="fill_parent"
		        android:layout_height="fill_parent"
		        android:text="@string/example_answer_A"
		        android:layout_toLeftOf="@id/btn_expand_answer_A"
		        android:drawableStart="@drawable/ic_answer_a"
		        style="@style/Answer" />
		</RelativeLayout>
	    <RelativeLayout
	        android:id="@+id/container_B"
		    android:layout_height="fill_parent"
		    android:layout_width="fill_parent"
		    android:layout_weight="1">
	        <ImageButton
		        android:id="@+id/btn_expand_answer_B"
		        android:layout_width="wrap_content"
		        android:layout_height="fill_parent"
		        android:src="@drawable/ic_action_expand"
		        android:padding="5dip"
		        android:layout_alignParentRight="true"
		        android:contentDescription="@string/expand_answer"
		        style="@style/Answer" />
		    <Button
		        android:id="@+id/answer_B"
		        android:layout_width="fill_parent"
		        android:layout_height="fill_parent"
		        android:text="@string/example_answer_B"
		        android:layout_toLeftOf="@id/btn_expand_answer_B"
		        android:drawableStart="@drawable/ic_answer_b"
		        style="@style/Answer" />
		</RelativeLayout>
	    <RelativeLayout
	        android:id="@+id/container_C"
		    android:layout_height="fill_parent"
		    android:layout_width="fill_parent"
		    android:layout_weight="1">
	        <ImageButton
		        android:id="@+id/btn_expand_answer_C"
		        android:layout_width="wrap_content"
		        android:layout_height="fill_parent"
		        android:src="@drawable/ic_action_expand"
		        android:padding="5dip"
		        android:layout_alignParentRight="true"
		        android:contentDescription="@string/expand_answer"
		        style="@style/Answer" />
		    <Button
		        android:id="@+id/answer_C"
		        android:layout_width="fill_parent"
		        android:layout_height="fill_parent"
		        android:text="@string/example_answer_C"
		        android:layout_toLeftOf="@id/btn_expand_answer_C"
		        android:drawableStart="@drawable/ic_answer_c"
		        style="@style/Answer" />
		</RelativeLayout>
		<RelativeLayout
		    android:id="@+id/container_D"
		    android:layout_height="fill_parent"
		    android:layout_width="fill_parent"
		    android:layout_weight="1">
	        <ImageButton
		        android:id="@+id/btn_expand_answer_D"
		        android:layout_width="wrap_content"
		        android:layout_height="fill_parent"
		        android:src="@drawable/ic_action_expand"
		        android:padding="5dip"
		        android:layout_alignParentRight="true"
		        android:contentDescription="@string/expand_answer"
		        style="@style/Answer" />
		    <Button
		        android:id="@+id/answer_D"
		        android:layout_width="fill_parent"
		        android:layout_height="fill_parent"
		        android:text="@string/example_answer_D"
		        android:layout_toLeftOf="@id/btn_expand_answer_D"
		        android:drawableStart="@drawable/ic_answer_d"
		        style="@style/Answer" />
		</RelativeLayout>
	</LinearLayout>
</RelativeLayout>